# bus-service_ros

./: README.md
midterm_201812275/: CMakeLists.txt  package.xml
midterm_201812275/action/: position.action
midterm_201812275/launch/: prior.launch
midterm_201812275/msg/: board.msg  info.msg
midterm_201812275/src/: bus_stop.cpp  information.cpp  judgement_stop.cpp  motor.cpp  passenger.cpp  smartphone.py
midterm_201812275/srv/: detect.srv  passenger.srv
rplidar_ros/: CMakeLists.txt  package.xml
rplidar_ros/src/: detect_station.py  node.cpp
